🐛  fix style.css: adjust #menuPlayerListView and #menuSaveListView height to display around ten items, also fixes scrollbar rendering on small windows

--- a/src/main/resources/fr/softsf/sudokufx/style/style.css
+++ b/src/main/resources/fr/softsf/sudokufx/style/style.css
@@ -523,9 +523,9 @@
 
 #menuPlayerListView,
 #menuSaveListView {
-    -fx-pref-height: 18.75em;
-    -fx-max-height: 18.75em;
-    -fx-min-height: 18.75em;
+    -fx-pref-height: 17.75em;
+    -fx-max-height: 17.75em;
+    -fx-min-height: 17.75em;
 }
 
 .menuListLineContainer {
